# metroMondego

./: README.md  ficheiros.c  ficheiros.h  linha.c  linha.h  menus.h  paragem.h  utils.c
TP/: CMakeLists.txt  main.c  menus.c  paragem.c  percurso.c  percurso.h  utils.h
